Training working on colab

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/DreRnc/ExplainingExplanations/blob/torch/Explanations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -23,29 +23,39 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "BW66PeQT_p6n"
+      },
       "outputs": [],
       "source": [
-        "colab = False"
+        "colab = True"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cpKHbnzGEWLt",
-        "outputId": "4e2e9cd2-5129-4a21-b1e6-fe30647eb165"
+        "id": "cpKHbnzGEWLt"
       },
       "outputs": [],
       "source": [
         "if colab:\n",
         "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
-        "    %cd ExplainingExplanations\n",
-        "    %pip install -r requirements.txt"
+        "    %cd ExplainingExplanations"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if colab:\n",
+        "  !git checkout torch\n",
+        "  !pip install -r requirements.txt"
+      ],
+      "metadata": {
+        "id": "G3c1JKsfAheo"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -82,11 +92,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Zugxo8WgEWLw",
-        "outputId": "dddf92d4-3262-405d-f03c-7f3a5466fa31"
+        "id": "Zugxo8WgEWLw"
       },
       "outputs": [],
       "source": [
@@ -103,11 +109,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "k8kaX3QbEWLw",
-        "outputId": "efbf320d-1f23-42c4-eec9-47538a124c77"
+        "id": "k8kaX3QbEWLw"
       },
       "outputs": [],
       "source": [
@@ -118,11 +120,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SLgS-BVbEWLx",
-        "outputId": "7bf1a5f3-d513-4f69-fe7c-86bdcee5932d"
+        "id": "SLgS-BVbEWLx"
       },
       "outputs": [],
       "source": [
@@ -150,11 +148,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jyczhxOR-jwU",
-        "outputId": "2037d920-557e-4323-d491-32240ec8d274"
+        "id": "jyczhxOR-jwU"
       },
       "outputs": [],
       "source": [
@@ -177,11 +171,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CKG-so0--7ug",
-        "outputId": "34391740-8351-4a3c-e74f-d15e2771c0b7"
+        "id": "CKG-so0--7ug"
       },
       "outputs": [],
       "source": [
@@ -218,11 +208,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BZILJcgoDO9b",
-        "outputId": "537fb2d2-34d2-479d-d761-6d7b3ae856ad"
+        "id": "BZILJcgoDO9b"
       },
       "outputs": [],
       "source": [
@@ -250,12 +236,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "7D2MQG6qJYnI",
-        "outputId": "daa5b5fa-502b-4f27-d1b0-89aa7d77ebd4"
+        "id": "7D2MQG6qJYnI"
       },
       "outputs": [],
       "source": [
@@ -267,11 +248,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C1roa6HcIi3e",
-        "outputId": "e5bf0477-f40e-47ba-8c12-dd2a6bcf9ff2"
+        "id": "C1roa6HcIi3e"
       },
       "outputs": [],
       "source": [
@@ -295,11 +272,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BfF032XGEWL1",
-        "outputId": "a070c406-29fb-4d66-b970-632c0c9d6fe6"
+        "id": "BfF032XGEWL1"
       },
       "outputs": [],
       "source": [
@@ -310,11 +283,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SYweTWpKEWL1",
-        "outputId": "b073b45e-47a0-4a69-f74f-6743a17cc8bf"
+        "id": "SYweTWpKEWL1"
       },
       "outputs": [],
       "source": [
@@ -327,11 +296,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K6EukG0TEWL1",
-        "outputId": "819f2410-22f5-447e-9657-43f91b7503ed"
+        "id": "K6EukG0TEWL1"
       },
       "outputs": [],
       "source": [
@@ -366,11 +331,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yRqHwqpOEWL3",
-        "outputId": "b9352e7a-1429-4510-d5f6-a9fd2697102e"
+        "id": "yRqHwqpOEWL3"
       },
       "outputs": [],
       "source": [
@@ -389,7 +350,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "1QkSPuy3_p6z"
+      },
       "outputs": [],
       "source": [
         "train_small_tokenized.features"
@@ -399,12 +362,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 381
-        },
-        "id": "SKgn7mee5Z0B",
-        "outputId": "e358316f-bf69-4857-ba1c-f9ace1ab8e45"
+        "id": "SKgn7mee5Z0B"
       },
       "outputs": [],
       "source": [
@@ -422,11 +380,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "h07uqsc25Z0B",
-        "outputId": "4141ae96-7a7e-4cd3-ec25-9cddf2394c90"
+        "id": "h07uqsc25Z0B"
       },
       "outputs": [],
       "source": [
@@ -475,7 +429,7 @@
       "outputs": [],
       "source": [
         "from src.utils import convert_labels\n",
-        "from tqdm import tqdm\n",
+        "from tqdm.auto import tqdm\n",
         "import torch\n",
         "import evaluate"
       ]
@@ -484,11 +438,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7aL8g0625yUD",
-        "outputId": "0c639e56-905c-479a-819f-3db8512adc7f"
+        "id": "7aL8g0625yUD"
       },
       "outputs": [],
       "source": [
@@ -505,12 +455,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 268
-        },
-        "id": "fxSLJWA66tpk",
-        "outputId": "18b90d12-68d5-44cd-e7ea-7ea3551a9ce7"
+        "id": "fxSLJWA66tpk"
       },
       "outputs": [],
       "source": [
@@ -524,13 +469,13 @@
         "    with torch.no_grad():\n",
         "        outputs = model.generate(**batch)\n",
         "        output = tokenizer.batch_decode(outputs, skip_special_tokens=True, max_length=100)\n",
+        "        print(output)\n",
         "        preds = convert_labels(output)\n",
         "\n",
         "    metric.add_batch(\n",
         "        predictions=preds,\n",
         "        references=batch[\"labels\"],\n",
         "    )\n",
-        "    break\n",
         "    progress_bar.update(1)\n",
         "\n",
         "metric.compute()"
@@ -548,7 +493,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "vcJMO9xH_p61"
+      },
       "outputs": [],
       "source": [
         "from torch.optim import AdamW\n",
@@ -559,7 +506,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "PotQxOTR_p61"
+      },
       "outputs": [],
       "source": [
         "import torch.nn as nn\n",
@@ -569,7 +518,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Rvjecf5w_p61"
+      },
       "outputs": [],
       "source": [
         "from transformers import get_scheduler\n",
@@ -584,11 +535,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "yw_R49oU_p7B"
+      },
       "outputs": [],
       "source": [
-        "from tqdm.auto import tqdm\n",
-        "\n",
         "progress_bar = tqdm(range(num_training_steps))\n",
         "\n",
         "model.train()\n",
@@ -644,8 +595,8 @@
         "BMD_Zq5zEWL4"
       ],
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
