Commiting faster version of code

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -22,25 +22,22 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "cpKHbnzGEWLt"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "!git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
-        "%cd ExplainingExplanations\n",
-        "!pip install -r requirements.txt"
+        "colab = False"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "oSqq2RETz7lU"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install accelerate -U"
+        "if colab:\n",
+        "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
+        "    %cd ExplainingExplanations\n",
+        "    %pip install -r requirements.txt"
       ]
     },
     {
@@ -431,39 +428,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SYweTWpKEWL1",
-        "outputId": "5225d14a-d19a-4563-a84c-fdc0e23c520a"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'premise': 'A person on a horse jumps over a broken down airplane.',\n",
-              " 'hypothesis': 'A person is training his horse for a competition.',\n",
-              " 'label': 1,\n",
-              " 'explanation_1': 'the person is not necessarily training his horse',\n",
-              " 'explanation_2': '',\n",
-              " 'explanation_3': ''}"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "train_small[0][\"prompt\"] = \"hello\"\n",
-        "\n",
-        "train_small[0]"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 15,
       "metadata": {
         "colab": {
@@ -619,21 +583,24 @@
       ],
       "source": [
         "time_init = time.time()\n",
-        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True).with_format(\n",
-        "    \"torch\"\n",
-        ")\n",
-        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True).with_format(\n",
-        "    \"torch\"\n",
-        ")\n",
-        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True).with_format(\n",
-        "    \"torch\"\n",
-        ")\n",
+        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
+        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
+        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
         "time_end = time.time()\n",
         "\n",
         "print(\"Time taken to tokenize: \", time_end - time_init)\n",
         "print(\"Shape of train_small_tokenized: \", train_small_tokenized.shape)\n",
         "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized.shape)\n",
         "print(\"Shape of test_small_tokenized: \", test_small_tokenized.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small_tokenized.features"
       ]
     },
     {
@@ -660,22 +627,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {
-        "id": "murMQ-wCEWL4"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# correct = 0\n",
-        "# seen = 0\n",
+        "if torch.cuda.is_available():\n",
+        "    device = torch.device('cuda')\n",
+        "else:\n",
+        "    device = torch.device('cpu')\n",
         "\n",
-        "# for tokenized_dp in tqdm(train_small_tokenized):\n",
-        "#       input_ids = tokenized_dp['input_ids'].unsqueeze(0)\n",
-        "#       outputs = model.generate(input_ids)\n",
-        "#       output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "#       correct += evaluate_output_mnli(output, tokenized_dp['label'])\n",
-        "\n",
-        "# print(\"Accuracy zero shot on test set: \", correct/n_test)"
+        "model.to(device)\n",
+        "device"
       ]
     },
     {
@@ -695,7 +657,7 @@
         "    # Check if 'input_ids' is a key in the dictionary\n",
         "    if \"input_ids\" in batch_dict:\n",
         "        # Prepare input_ids tensor for the entire batch\n",
-        "        input_ids = batch_dict[\"input_ids\"]\n",
+        "        input_ids = batch_dict[\"input_ids\"].to(device)\n",
         "\n",
         "        # Generate outputs for the batch\n",
         "        outputs = model.generate(input_ids)\n",
@@ -713,66 +675,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "-A5VI8vK6S2p"
-      },
-      "outputs": [],
-      "source": [
-        "outputs.size()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "EP3N7JCOPd-0"
-      },
-      "outputs": [],
-      "source": [
-        "output"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "uKIQqziDEWL4"
-      },
-      "outputs": [],
-      "source": [
-        "# correct = 0\n",
-        "# seen = 0\n",
-        "\n",
-        "# for datapoint in tqdm(test_small):\n",
-        "# prompt = generate_prompt_mnli(datapoint)\n",
-        "# input_ids = tokenizer(prompt, return_tensors= \"pt\").input_ids\n",
-        "# outputs = model.generate(input_ids)\n",
-        "# output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "# correct += evaluate_output_mnli(output, datapoint['label'])\n",
-        "\n",
-        "# print(\"Accuracy zero shot on test set: \", correct/n_test)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bQoQE4naEWL4"
       },
       "source": [
         "# 3.0 Task 2: Fine tuning without explanations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aUxs9O7BGRok"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install evaluate"
       ]
     },
     {
@@ -785,7 +693,15 @@
       "source": [
         "import numpy as np\n",
         "import evaluate\n",
-        "\n",
+        "from transformers import TrainingArguments, Trainer, AutoTokenizer, T5ForConditionalGeneration"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "metric = evaluate.load(\"accuracy\")"
       ]
     },
@@ -797,10 +713,19 @@
       },
       "outputs": [],
       "source": [
-        "def compute_metrics(eval_pred):\n",
+        "def compute_metrics(eval_pred, metric):\n",
         "    logits, labels = eval_pred\n",
         "    predictions = np.argmax(logits, axis=-1)\n",
         "    return metric.compute(predictions=predictions, references=labels)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "compute_accuracy = partial(compute_metrics, metric=metric)"
       ]
     },
     {
@@ -811,8 +736,6 @@
       },
       "outputs": [],
       "source": [
-        "from transformers import TrainingArguments, Trainer\n",
-        "\n",
         "training_args = TrainingArguments(\n",
         "    output_dir=\"test_trainer\", evaluation_strategy=\"epoch\"\n",
         ")"
@@ -826,8 +749,6 @@
       },
       "outputs": [],
       "source": [
-        "from transformers import AutoTokenizer, T5ForConditionalGeneration\n",
-        "\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
         "model = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
       ]
@@ -845,7 +766,7 @@
         "    args=training_args,\n",
         "    train_dataset=train_small_tokenized,\n",
         "    eval_dataset=test_small_tokenized,\n",
-        "    compute_metrics=compute_metrics,\n",
+        "    compute_metrics=compute_accuracy,\n",
         ")"
       ]
     },
