--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -693,39 +693,8 @@
       "source": [
         "import numpy as np\n",
         "import evaluate\n",
+        "from src.utils import compute_accuracy\n",
         "from transformers import TrainingArguments, Trainer, AutoTokenizer, T5ForConditionalGeneration"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "metric = evaluate.load(\"accuracy\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {
-        "id": "ThL1ghEKPVLF"
-      },
-      "outputs": [],
-      "source": [
-        "def compute_metrics(eval_pred, metric):\n",
-        "    logits, labels = eval_pred\n",
-        "    predictions = np.argmax(logits, axis=-1)\n",
-        "    return metric.compute(predictions=predictions, references=labels)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "compute_accuracy = partial(compute_metrics, metric=metric)"
       ]
     },
     {
@@ -830,7 +799,16 @@
       },
       "outputs": [],
       "source": [
-        "trainer.train()"
+        "#trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate()"
       ]
     },
     {
@@ -879,7 +857,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.10.8"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
