--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/DreRnc/ExplainingExplanations/blob/main/Explanations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -376,30 +376,30 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "fxSLJWA66tpk",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "fxSLJWA66tpk",
         "outputId": "99398f7f-8a2c-4707-ade2-21f1ad247203"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 20/20 [00:22<00:00,  1.10s/it]"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Accuracy zero-shot on the test set:  tensor(0.7068)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
@@ -461,8 +461,7 @@
       "source": [
         "training_args = TrainingArguments(\n",
         "    output_dir=\"test_trainer\",\n",
-        "    evaluation_strategy=\"epoch\",\n",
-        "    eval_accumulation_steps = 1\n",
+        "    evaluation_strategy=\"epoch\"\n",
         ")"
       ]
     },
@@ -485,10 +484,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "0-n9S3YQhirG"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
@@ -516,20 +515,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2HY5nl2RHx5J",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 95
         },
+        "id": "2HY5nl2RHx5J",
         "outputId": "4210f615-2304-45bc-8231-813def9c629b"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "    <div>\n",
@@ -554,9 +549,13 @@
               "      [ 11/625 00:29 < 30:11, 0.34 it/s]\n",
               "    </div>\n",
               "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -574,14 +573,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "trainer.evaluate()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "F1qAg0tmiMmv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "trainer.evaluate()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -603,6 +602,7 @@
     }
   ],
   "metadata": {
+    "accelerator": "TPU",
     "colab": {
       "collapsed_sections": [
         "UZvGBSfFEWLv",
@@ -613,8 +613,8 @@
         "bQoQE4naEWL4",
         "BMD_Zq5zEWL4"
       ],
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -631,8 +631,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.8"
-    },
-    "accelerator": "TPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
