Ready for testing on colab

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -453,6 +453,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
+        "model_ft = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 30,
       "metadata": {
         "id": "OHxW0vUdGLSa"
@@ -480,35 +490,6 @@
         "    eval_dataset=test_small_tokenized,\n",
         "    compute_metrics=compute_accuracy\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0-n9S3YQhirG"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "htxsCXlYTSpF"
-      },
-      "outputs": [],
-      "source": [
-        "train_small_tokenized[\"label\"].size()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "l_99ruMgTYwq"
-      },
-      "outputs": [],
-      "source": [
-        "train_small_tokenized[\"input_ids\"].size()"
       ]
     },
     {
@@ -566,17 +547,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "trainer.evaluate()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F1qAg0tmiMmv"
-      },
       "outputs": [],
       "source": [
         "trainer.evaluate()"
