--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -447,7 +447,7 @@
       "source": [
         "import numpy as np\n",
         "import evaluate\n",
-        "from src.utils import compute_accuracy\n",
+        "from src.utils import compute_accuracy, preprocess_logits_for_accuracy\n",
         "from transformers import TrainingArguments, Trainer, AutoTokenizer, T5ForConditionalGeneration"
       ]
     },
@@ -488,7 +488,8 @@
         "    args=training_args,\n",
         "    train_dataset=train_small_tokenized,\n",
         "    eval_dataset=test_small_tokenized,\n",
-        "    compute_metrics=compute_accuracy\n",
+        "    compute_metrics=compute_accuracy,\n",
+        "    preprocess_logits_for_metrics = preprocess_logits_for_accuracy\n",
         ")"
       ]
     },
