correcting eval func

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -447,8 +447,18 @@
       "source": [
         "import numpy as np\n",
         "import evaluate\n",
-        "from src.utils import compute_accuracy, preprocess_logits_argmax\n",
+        "from src.utils import compute_metrics, preprocess_logits_argmax, eval_pred_transform_accuracy\n",
         "from transformers import TrainingArguments, Trainer, AutoTokenizer, T5ForConditionalGeneration"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "transform_accuracy = partial(eval_pred_transform_accuracy, tokenizer = tokenizer)\n",
+        "compute_accuracy = partial(compute_metrics, transform=transform_accuracy, metric = evaluate.load('accuracy'))"
       ]
     },
     {
@@ -460,6 +470,11 @@
         "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
         "model_ft = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
@@ -487,7 +502,7 @@
         "    model=model_ft,\n",
         "    args=training_args,\n",
         "    train_dataset=train_small_tokenized,\n",
-        "    eval_dataset=test_small_tokenized,\n",
+        "    eval_dataset=valid_small_tokenized,\n",
         "    compute_metrics=compute_accuracy,\n",
         "    preprocess_logits_for_metrics = preprocess_logits_argmax\n",
         ")"
