debugging on colab

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -565,7 +565,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.evaluate()"
+        "trainer.evaluate(test_small_tokenized)"
       ]
     },
     {
