--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -243,6 +243,8 @@
         "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
         "\n",
         "outputs = model.generate(input_ids)\n",
+        "print('Shape of outputs:', outputs.shape)\n",
+        "print('Shape of outputs[0]:', outputs[0].shape)\n",
         "\n",
         "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
       ]
