--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -483,7 +483,8 @@
       "source": [
         "training_args = TrainingArguments(\n",
         "    output_dir=\"test_trainer\",\n",
-        "    evaluation_strategy=\"epoch\"\n",
+        "    evaluation_strategy=\"epoch\",\n",
+        "    per_device_eval_batch_size=1\n",
         ")"
       ]
     },
@@ -553,7 +554,7 @@
         }
       ],
       "source": [
-        "#trainer.train()"
+        "trainer.train()"
       ]
     },
     {
