--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -450,7 +450,7 @@
         "import numpy as np\n",
         "import evaluate\n",
         "from src.utils import compute_metrics, preprocess_logits_argmax, eval_pred_transform_accuracy\n",
-        "from transformers import TrainingArguments, Trainer, AutoTokenizer, T5ForConditionalGeneration"
+        "from transformers import TrainingArguments, Trainer, T5ForConditionalGeneration"
       ]
     },
     {
