Trying to run on colab fixed code

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -112,7 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "n_train = n_valid = n_test = 8\n",
+        "n_train = n_valid = n_test = 5000\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -483,7 +483,8 @@
         "training_args = TrainingArguments(\n",
         "    output_dir=\"test_trainer\",\n",
         "    evaluation_strategy=\"epoch\",\n",
-        "    per_device_eval_batch_size=1\n",
+        "    per_device_train_batch_size=16,\n",
+        "    per_device_eval_batch_size=16\n",
         ")"
       ]
     },
