--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -112,7 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "n_train = n_valid = n_test = 5000\n",
+        "n_train = n_valid = n_test = 10000\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -474,6 +474,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "hyperparameters = {\n",
+        "    \"output_dir\": \"ft_esnli_NoExpl\",\n",
+        "    \"evaluation_strategy\": \"epoch\",\n",
+        "    \"num_train_epochs\": 3,\n",
+        "    \"per_device_train_batch_size\": 16,\n",
+        "    \"per_device_eval_batch_size\": 16,\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 30,
       "metadata": {
         "id": "OHxW0vUdGLSa"
@@ -481,10 +496,7 @@
       "outputs": [],
       "source": [
         "training_args = TrainingArguments(\n",
-        "    output_dir=\"test_trainer\",\n",
-        "    evaluation_strategy=\"epoch\",\n",
-        "    per_device_train_batch_size=16,\n",
-        "    per_device_eval_batch_size=16\n",
+        "    **hyperparameters\n",
         ")"
       ]
     },
