--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -112,7 +112,8 @@
       },
       "outputs": [],
       "source": [
-        "n_train = n_valid = n_test = 10000\n",
+        "n_train = 10000\n",
+        "n_valid = n_test = 500\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -474,21 +475,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "hyperparameters = {\n",
-        "    \"output_dir\": \"ft_esnli_NoExpl\",\n",
-        "    \"evaluation_strategy\": \"epoch\",\n",
-        "    \"num_train_epochs\": 3,\n",
-        "    \"per_device_train_batch_size\": 16,\n",
-        "    \"per_device_eval_batch_size\": 16,\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 30,
       "metadata": {
         "id": "OHxW0vUdGLSa"
@@ -496,7 +482,11 @@
       "outputs": [],
       "source": [
         "training_args = TrainingArguments(\n",
-        "    **hyperparameters\n",
+        "    output_dir=\"test_trainer\",\n",
+        "    evaluation_strategy=\"epoch\",\n",
+        "    num_train_epochs=5,\n",
+        "    per_device_train_batch_size=16,\n",
+        "    per_device_eval_batch_size=16\n",
         ")"
       ]
     },
