--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -112,8 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "n_train = 10000\n",
-        "n_valid = n_test = 500\n",
+        "n_train = n_valid = n_test = 50\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -451,7 +450,7 @@
         "import numpy as np\n",
         "import evaluate\n",
         "from src.utils import compute_metrics, preprocess_logits_argmax, eval_pred_transform_accuracy\n",
-        "from transformers import TrainingArguments, Trainer, T5ForConditionalGeneration"
+        "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration"
       ]
     },
     {
@@ -481,10 +480,11 @@
       },
       "outputs": [],
       "source": [
-        "training_args = TrainingArguments(\n",
+        "training_args = Seq2SeqTrainingArguments(\n",
         "    output_dir=\"test_trainer\",\n",
         "    evaluation_strategy=\"epoch\",\n",
         "    num_train_epochs=5,\n",
+        "    predict_with_generate=True,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16\n",
         ")"
@@ -498,7 +498,7 @@
       },
       "outputs": [],
       "source": [
-        "trainer = Trainer(\n",
+        "trainer = Seq2SeqTrainer(\n",
         "    model=model_ft,\n",
         "    args=training_args,\n",
         "    train_dataset=train_small_tokenized,\n",
@@ -556,7 +556,7 @@
         }
       ],
       "source": [
-        "trainer.train()"
+        "#trainer.train()"
       ]
     },
     {
