--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -408,7 +408,7 @@
       "source": [
         "correct = 0\n",
         "seen = 0\n",
-        "batch_size = 16 # Choose an appropriate batch size\n",
+        "batch_size = 256 # Choose an appropriate batch size\n",
         "\n",
         "for i in tqdm(range(0, len(train_small_tokenized), batch_size)):\n",
         "    batch_dict = train_small_tokenized[i : i + batch_size]\n",
@@ -426,7 +426,7 @@
         "        \n",
         "        correct += output == label\n",
         "        seen += 1\n",
-        "\n",
+        "print()\n",
         "print(\"Accuracy zero-shot on the test set: \", correct / seen)"
       ]
     },
@@ -450,7 +450,7 @@
         "import numpy as np\n",
         "import evaluate\n",
         "from src.utils import compute_metrics, eval_pred_transform_accuracy\n",
-        "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration"
+        "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration, DataCollatorForSeq2Seq\n"
       ]
     },
     {
@@ -469,7 +469,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "model_ft = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
+        "model_ft = T5ForConditionalGeneration.from_pretrained(\"t5-small\")\n",
+        "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_ft)"
       ]
     },
     {
@@ -505,7 +506,17 @@
         "    train_dataset=train_small_tokenized,\n",
         "    eval_dataset=valid_small_tokenized,\n",
         "    compute_metrics=compute_accuracy,\n",
+        "    data_collator=data_collator,\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(train_small_tokenized)"
       ]
     },
     {
@@ -522,15 +533,6 @@
       "outputs": [],
       "source": [
         "trainer.train()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "trainer.evaluate(test_small_tokenized)"
       ]
     },
     {
