--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -507,6 +507,7 @@
         "    eval_dataset=valid_small_tokenized,\n",
         "    compute_metrics=compute_accuracy,\n",
         "    data_collator=data_collator,\n",
+        "    tokenizer=tokenizer,\n",
         ")"
       ]
     },
