--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -28,7 +28,7 @@
       },
       "outputs": [],
       "source": [
-        "colab = False"
+        "colab = True"
       ]
     },
     {
@@ -42,7 +42,8 @@
         "if colab:\n",
         "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
         "    %cd ExplainingExplanations\n",
-        "    %pip install -r requirements.txt"
+        "    %pip install -r requirements.txt\n",
+        "    !git checkout seq2seq"
       ]
     },
     {
