--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -113,7 +113,8 @@
       },
       "outputs": [],
       "source": [
-        "n_train = n_valid = n_test = 500\n",
+        "n_train = 10000\n",
+        "n_valid = n_test = 1000\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -333,7 +334,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "print(type(train_small_tokenized))"
+        "train_small_tokenized = train_small_tokenized.remove_columns(['label'])\n",
+        "valid_small_tokenized = valid_small_tokenized.remove_columns(['label'])\n",
+        "test_small_tokenized = test_small_tokenized.remove_columns(['label'])"
       ]
     },
     {
@@ -345,15 +348,6 @@
       "outputs": [],
       "source": [
         "train_small_tokenized.features"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_small_tokenized = train_small_tokenized.remove_columns(['label'])"
       ]
     },
     {
@@ -407,28 +401,28 @@
       },
       "outputs": [],
       "source": [
-        "correct = 0\n",
-        "seen = 0\n",
-        "batch_size = 256 # Choose an appropriate batch size\n",
+        "# correct = 0\n",
+        "# seen = 0\n",
+        "# batch_size = 256 # Choose an appropriate batch size\n",
         "\n",
-        "for i in tqdm(range(0, len(train_small_tokenized), batch_size)):\n",
-        "    batch_dict = train_small_tokenized[i : i + batch_size]\n",
+        "# for i in tqdm(range(0, len(train_small_tokenized), batch_size)):\n",
+        "#     batch_dict = train_small_tokenized[i : i + batch_size]\n",
         "\n",
-        "    # Prepare input_ids tensor for the entire batch\n",
-        "    input_ids = batch_dict[\"input_ids\"].to(device)\n",
+        "#     # Prepare input_ids tensor for the entire batch\n",
+        "#     input_ids = batch_dict[\"input_ids\"].to(device)\n",
         "\n",
-        "    # Generate outputs for the batch\n",
-        "    outputs = model.generate(input_ids)\n",
+        "#     # Generate outputs for the batch\n",
+        "#     outputs = model.generate(input_ids)\n",
         "\n",
-        "    # Iterate through the batch and evaluate each output\n",
-        "    for idx, output_ids in enumerate(outputs):\n",
-        "        output = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
-        "        label = tokenizer.decode(batch_dict[\"labels\"][idx], skip_special_tokens=True)\n",
+        "#     # Iterate through the batch and evaluate each output\n",
+        "#     for idx, output_ids in enumerate(outputs):\n",
+        "#         output = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
+        "#         label = tokenizer.decode(batch_dict[\"labels\"][idx], skip_special_tokens=True)\n",
         "        \n",
-        "        correct += output == label\n",
-        "        seen += 1\n",
-        "print()\n",
-        "print(\"Accuracy zero-shot on the test set: \", correct / seen)"
+        "#         correct += output == label\n",
+        "#         seen += 1\n",
+        "# print()\n",
+        "# print(\"Accuracy zero-shot on the test set: \", correct / seen)"
       ]
     },
     {
