Commit for seeing in colab results of seq2seq training

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -292,7 +292,6 @@
       "outputs": [],
       "source": [
         "from functools import partial\n",
-        "import torch\n",
         "from src.utils import tokenize_function\n",
         "import time"
       ]
@@ -356,20 +355,21 @@
         "id": "s4SNHcxuEWL3"
       },
       "source": [
-        "# 2.0 Task 1: Zero-shot evaluation"
+        "# 2.0 Tasks 1"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MOwNiKJdEWL3"
+        "id": "2DSm47RYGNvZ"
       },
       "outputs": [],
       "source": [
-        "from src.utils import evaluate_output_mnli\n",
-        "from tqdm import tqdm\n",
-        "import torch"
+        "import torch\n",
+        "import evaluate\n",
+        "from src.utils import compute_metrics, eval_pred_transform_accuracy\n",
+        "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration, DataCollatorForSeq2Seq\n"
       ]
     },
     {
@@ -392,60 +392,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fxSLJWA66tpk",
-        "outputId": "99398f7f-8a2c-4707-ade2-21f1ad247203"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# correct = 0\n",
-        "# seen = 0\n",
-        "# batch_size = 256 # Choose an appropriate batch size\n",
-        "\n",
-        "# for i in tqdm(range(0, len(train_small_tokenized), batch_size)):\n",
-        "#     batch_dict = train_small_tokenized[i : i + batch_size]\n",
-        "\n",
-        "#     # Prepare input_ids tensor for the entire batch\n",
-        "#     input_ids = batch_dict[\"input_ids\"].to(device)\n",
-        "\n",
-        "#     # Generate outputs for the batch\n",
-        "#     outputs = model.generate(input_ids)\n",
-        "\n",
-        "#     # Iterate through the batch and evaluate each output\n",
-        "#     for idx, output_ids in enumerate(outputs):\n",
-        "#         output = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
-        "#         label = tokenizer.decode(batch_dict[\"labels\"][idx], skip_special_tokens=True)\n",
-        "        \n",
-        "#         correct += output == label\n",
-        "#         seen += 1\n",
-        "# print()\n",
-        "# print(\"Accuracy zero-shot on the test set: \", correct / seen)"
+        "transform_accuracy = partial(eval_pred_transform_accuracy, tokenizer = tokenizer)\n",
+        "compute_accuracy = partial(compute_metrics, pred_transform=transform_accuracy, metric = evaluate.load('accuracy'))"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "bQoQE4naEWL4"
-      },
+      "metadata": {},
       "source": [
-        "# 3.0 Task 2: Fine tuning without explanations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2DSm47RYGNvZ"
-      },
-      "outputs": [],
-      "source": [
-        "import numpy as np\n",
-        "import evaluate\n",
-        "from src.utils import compute_metrics, eval_pred_transform_accuracy\n",
-        "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration, DataCollatorForSeq2Seq\n"
+        "## 2.1 Task 1: Zero-shot evaluation"
       ]
     },
     {
@@ -454,8 +412,57 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "transform_accuracy = partial(eval_pred_transform_accuracy, tokenizer = tokenizer)\n",
-        "compute_accuracy = partial(compute_metrics, pred_transform=transform_accuracy, metric = evaluate.load('accuracy'))"
+        "model = T5ForConditionalGeneration.from_pretrained(\"t5-small\")\n",
+        "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "training_args = Seq2SeqTrainingArguments(\n",
+        "    output_dir=\"task1\",\n",
+        "    predict_with_generate=True,\n",
+        "    per_device_eval_batch_size=16,\n",
+        "    generation_max_length=32,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer = Seq2SeqTrainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=train_small_tokenized,\n",
+        "    eval_dataset=valid_small_tokenized,\n",
+        "    compute_metrics=compute_accuracy,\n",
+        "    data_collator=data_collator,\n",
+        "    tokenizer=tokenizer,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(test_small_tokenized)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bQoQE4naEWL4"
+      },
+      "source": [
+        "## 2.2 Task 2: Fine tuning without explanations"
       ]
     },
     {
@@ -465,7 +472,7 @@
       "outputs": [],
       "source": [
         "model_ft = T5ForConditionalGeneration.from_pretrained(\"t5-small\")\n",
-        "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_ft)"
+        "data_collator_ft = DataCollatorForSeq2Seq(tokenizer, model=model_ft)"
       ]
     },
     {
@@ -476,14 +483,14 @@
       },
       "outputs": [],
       "source": [
-        "training_args = Seq2SeqTrainingArguments(\n",
-        "    output_dir=\"test_trainer\",\n",
+        "training_args_ft = Seq2SeqTrainingArguments(\n",
+        "    output_dir=\"task2\",\n",
         "    evaluation_strategy=\"epoch\",\n",
         "    num_train_epochs=5,\n",
         "    predict_with_generate=True,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
-        "    generation_max_length=128,\n",
+        "    generation_max_length=32,\n",
         ")"
       ]
     },
@@ -495,13 +502,13 @@
       },
       "outputs": [],
       "source": [
-        "trainer = Seq2SeqTrainer(\n",
+        "trainer_ft = Seq2SeqTrainer(\n",
         "    model=model_ft,\n",
-        "    args=training_args,\n",
+        "    args=training_args_ft,\n",
         "    train_dataset=train_small_tokenized,\n",
         "    eval_dataset=valid_small_tokenized,\n",
         "    compute_metrics=compute_accuracy,\n",
-        "    data_collator=data_collator,\n",
+        "    data_collator=data_collator_ft,\n",
         "    tokenizer=tokenizer,\n",
         ")"
       ]
@@ -532,12 +539,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(test_small_tokenized)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BMD_Zq5zEWL4"
       },
       "source": [
-        "# 4.0 Task 4: Making the model generate explanations"
+        "# 2.3 Task 3: Making the model generate explanations"
       ]
     },
     {
